--- a/comment.html
+++ b/comment.html
@@ -25,6 +25,7 @@
 </head>
 
 <body>
+<div class="attention">本电商购物平台为演示网站，仅供学习和交流。所有交易金额均为0.01元，并且不会真实发货！</div>
 	<div id="commentList">
 		<div class="nav-table">
 			<div class="long-title"><span class="all-goods" style="font-weight: bold;">用户中心</span></div>
