--- a/userinfo.html
+++ b/userinfo.html
@@ -25,7 +25,7 @@
 	</head>
 
 	<body>
-
+	<div class="attention">本电商购物平台为演示网站，仅供学习和交流。所有交易金额均为0.01元，并且不会真实发货！</div>
 			<form enctype="multipart/form-data">
 
 			</form>
