--- a/address.html
+++ b/address.html
@@ -13,6 +13,7 @@
 
 		<link href="css/personal.css" rel="stylesheet" type="text/css">
 		<link href="css/addstyle.css" rel="stylesheet" type="text/css">
+		<link href="css/lee.css" rel="stylesheet" type="text/css" />
 		<script src="AmazeUI-2.4.2/assets/js/jquery.min.js" type="text/javascript"></script>
 		<script src="AmazeUI-2.4.2/assets/js/amazeui.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/vue@2.6.9/dist/vue.js"></script>
