--- a/comment.html
+++ b/comment.html
@@ -16,7 +16,7 @@
 
 	<!-- 分页css -->
 	<link href="components/VuePaging/zpageNav.css" rel="stylesheet" />
-
+	<link href="css/lee.css" rel="stylesheet" type="text/css" />
 	<script src="AmazeUI-2.4.2/assets/js/jquery.min.js"></script>
 	<script src="AmazeUI-2.4.2/assets/js/amazeui.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.9/dist/vue.js"></script>
