--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link href="AmazeUI-2.4.2/assets/css/amazeui.css" rel="stylesheet" type="text/css">
 	<link href="css/personal.css" rel="stylesheet" type="text/css">
 	<link href="css/systyle.css" rel="stylesheet" type="text/css">
-
+	<link href="css/lee.css" rel="stylesheet" type="text/css" />
 	<!-- 分页css -->
 	<link href="components/VuePaging/zpageNav.css" rel="stylesheet" />
 
