去掉用户ID信息

--- a/address.html
+++ b/address.html
@@ -131,7 +131,7 @@
 								serverUrl + '/user/address/list?userId=' + userInfo.id, {},
 								{
 									headers: {
-										'headerUserId': userInfo.id,
+										/*'headerUserId': userInfo.id,*/
 										'headerUserToken': userInfo.userUniqueToken
 									}
 								})
