--- a/comment.html
+++ b/comment.html
@@ -194,7 +194,7 @@
 							"&page=" + page +
 							"&pageSize=" + pageSize, {}, {
 								headers: {
-									'headerUserId': userInfo.id,
+									/*'headerUserId': userInfo.id,*/
 									'headerUserToken': userInfo.userUniqueToken
 								}
 							})
