--- a/doComment.html
+++ b/doComment.html
@@ -185,7 +185,7 @@
 							orderItemList, 
 							{
 								headers: {
-									'headerUserId': userInfo.id,
+									/*'headerUserId': userInfo.id,*/
 									'headerUserToken': userInfo.userUniqueToken
 								}
 							})
@@ -247,7 +247,7 @@
 							serverUrl + '/merchandise/mycomments/pending?userId=' + userInfo.id + "&orderId=" + orderId, {},
 							{
 								headers: {
-									'headerUserId': userInfo.id,
+									/*'headerUserId': userInfo.id,*/
 									'headerUserToken': userInfo.userUniqueToken
 								}
 							})
