--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 							"&pageSize=" + pageSize, {}, 
 							{
 								headers: {
-									'headerUserId': userInfo.id,
+									/*'headerUserId': userInfo.id,*/
 									'headerUserToken': userInfo.userUniqueToken
 								}
 							})
@@ -305,7 +305,7 @@
 							serverUrl + '/order/myorders/statusCounts?userId=' + userInfo.id, {},
 							{
 								headers: {
-									'headerUserId': userInfo.id,
+									/*'headerUserId': userInfo.id,*/
 									'headerUserToken': userInfo.userUniqueToken
 								}
 							})
