--- a/order.html
+++ b/order.html
@@ -282,7 +282,7 @@
 							serverUrl + '/order/myorders/delete?userId=' + userInfo.id + "&orderId=" + orderId, {},
 							{
 								headers: {
-									'headerUserId': userInfo.id,
+									/*'headerUserId': userInfo.id,*/
 									'headerUserToken': userInfo.userUniqueToken
 								}
 							})
@@ -312,7 +312,7 @@
 							serverUrl + '/order/myorders/confirmReceive?userId=' + userInfo.id + "&orderId=" + orderId, {},
 							{
 								headers: {
-									'headerUserId': userInfo.id,
+									/*'headerUserId': userInfo.id,*/
 									'headerUserToken': userInfo.userUniqueToken
 								}
 							})
@@ -363,7 +363,7 @@
 							"&page=" + page +
 							"&pageSize=" + pageSize, {}, {
 								headers: {
-									'headerUserId': userInfo.id,
+									/*'headerUserId': userInfo.id,*/
 									'headerUserToken': userInfo.userUniqueToken
 								}
 							})
