--- a/userinfo.html
+++ b/userinfo.html
@@ -235,7 +235,7 @@
 								{
 									headers: {
 										'Content-Type': 'multipart/form-data',
-										'headerUserId': userInfo.id,
+										/*'headerUserId': userInfo.id,*/
 										'headerUserToken': userInfo.userUniqueToken
 									}
 								})
@@ -311,7 +311,7 @@
 								userInfoMore, 
 								{
 									headers: {
-										'headerUserId': userInfo.id,
+										/*'headerUserId': userInfo.id,*/
 										'headerUserToken': userInfo.userUniqueToken
 									}
 								})
@@ -338,7 +338,7 @@
 								serverUrl + '/user/center/userInfo?userId=' + userInfo.id,
 								{
 									headers: {
-										'headerUserId': userInfo.id,
+										/*'headerUserId': userInfo.id,*/
 										'headerUserToken': userInfo.userUniqueToken
 									}
 								})
