--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
 					var serverUrl = app.serverUrl;
 					axios.defaults.withCredentials = true;
 					axios.post(
-							serverUrl + '/order/myorders/trend?userId=' + userInfo.id +
-							"&page=" + page +
+							serverUrl + '/order/myorders/trend?' +
+							"page=" + page +
 							"&pageSize=" + pageSize, {}, 
 							{
 								headers: {
@@ -302,7 +302,7 @@
 					var serverUrl = app.serverUrl;
 					axios.defaults.withCredentials = true;
 					axios.post(
-							serverUrl + '/order/myorders/statusCounts?userId=' + userInfo.id, {},
+							serverUrl + '/order/myorders/statusCounts', {},
 							{
 								headers: {
 									/*'headerUserId': userInfo.id,*/
